--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm version release",
+      "pre-push": "npm version patch",
       "pre-commit--DISABLED": "npm test"
     }
   },
+
   "dependencies": {
     "boxen": "^4.2.0",
     "chalk": "^4.0.0",
