--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "w": "./Wand.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "",
     "build": "echo $PWD && echo `date +%R\\ ` \"Building package...\" && rm -rf ./dist/* && mkdir -p ./dist && npx tsc &&  rsync -ra ./src/ ./dist --exclude='*.ts' && cp package.json ./dist && cp README.md ./dist && echo \"package build done...\"",
     "deploy": "npm run build; cd dist && npm pack | xargs npm i -g",
     "postinstall": "w readme && w init --force",
