--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "",
     "build": "echo $PWD && echo `date +%R\\ ` \"Building package...\" && rm -rf ./dist/* && mkdir -p ./dist && npx tsc &&  rsync -ra ./src/ ./dist --exclude='*.ts' && cp package.json ./dist && cp README.md ./dist && echo \"package build done...\"",
-    "deploy": "npm run build; cd dist && npm pack | xargs npm i -g",
+    "deploy": "npm run build; cd dist && npm pack | xargs npm i -g --ignore-scripts",
     "postinstall": "w readme && w init --force",
     "xnode": "node -e 'var figlet=require(\"figlet\");figlet.textSync(\"wand v1.0.0\", {horizontalLayout: \"full\", font: \"Flower Power\" })'"
   },
