--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     }
   },
   "dependencies": {
+    "@chimpwizards/wand": "^1.0.51",
     "boxen": "^5.0.1",
     "cd": "^0.3.3",
     "chalk": "^4.0.0",
@@ -43,6 +44,7 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@chimpwizards-wand/spell-api": "^2.0.33",
     "@types/clear": "^0.1.0",
     "@types/debug": "^4.1.5",
     "@types/figlet": "^1.2.0",
